--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -2,28 +2,28 @@
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 04/29/2020
-ms.openlocfilehash: c234638cc6ccf4444e86329492ec3855881ef9c8
-ms.sourcegitcommit: 0926684d8d34f4c6b5acce58d2193db093cb9cf2
+ms.openlocfilehash: 2a346748e2df5fe71d75d5a69fad27c3b45b9c5e
+ms.sourcegitcommit: ee5b798427f81237a3c23d1fd81fff7fdc21e8d3
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/20/2020
-ms.locfileid: "83702448"
+ms.lasthandoff: 05/28/2020
+ms.locfileid: "84144500"
 ---
-# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="c3a93-103">Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0</span><span class="sxs-lookup"><span data-stu-id="c3a93-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
+# <a name="breaking-changes-for-migration-from-version-31-to-50"></a><span data-ttu-id="c7f76-103">Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0</span><span class="sxs-lookup"><span data-stu-id="c7f76-103">Breaking changes for migration from version 3.1 to 5.0</span></span>
 
-<span data-ttu-id="c3a93-104">Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="c3a93-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
+<span data-ttu-id="c7f76-104">Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Core alla versione 5,0 di .NET, ASP.NET Core o EF Core, le modifiche di rilievo elencate in questo articolo potrebbero influire sull'app.</span><span class="sxs-lookup"><span data-stu-id="c7f76-104">If you're migrating from version 3.1 of .NET Core, ASP.NET Core, or EF Core to version 5.0 of .NET, ASP.NET Core, or EF Core, the breaking changes listed in this article may affect your app.</span></span>
 
-## <a name="aspnet-core"></a><span data-ttu-id="c3a93-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="c3a93-105">ASP.NET Core</span></span>
+## <a name="aspnet-core"></a><span data-ttu-id="c7f76-105">ASP.NET Core</span><span class="sxs-lookup"><span data-stu-id="c7f76-105">ASP.NET Core</span></span>
 
-- [<span data-ttu-id="c3a93-106">Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi</span><span class="sxs-lookup"><span data-stu-id="c3a93-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
-- [<span data-ttu-id="c3a93-107">Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet</span><span class="sxs-lookup"><span data-stu-id="c3a93-107">Extensions: Package reference changes affecting some NuGet packages</span></span>](#extensions-package-reference-changes-affecting-some-nuget-packages)
-- [<span data-ttu-id="c3a93-108">HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer</span><span class="sxs-lookup"><span data-stu-id="c3a93-108">HTTP: HttpClient instances created by IHttpClientFactory log integer status codes</span></span>](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
-- [<span data-ttu-id="c3a93-109">Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti</span><span class="sxs-lookup"><span data-stu-id="c3a93-109">HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced</span></span>](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
-- [<span data-ttu-id="c3a93-110">Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi</span><span class="sxs-lookup"><span data-stu-id="c3a93-110">Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed</span></span>](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
-- [<span data-ttu-id="c3a93-111">SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x</span><span class="sxs-lookup"><span data-stu-id="c3a93-111">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
-- [<span data-ttu-id="c3a93-112">SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato</span><span class="sxs-lookup"><span data-stu-id="c3a93-112">SignalR: MessagePack Hub Protocol options type changed</span></span>](#signalr-messagepack-hub-protocol-options-type-changed)
-- [<span data-ttu-id="c3a93-113">SignalR: Metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="c3a93-113">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
-- [<span data-ttu-id="c3a93-114">File statici: tipo di contenuto CSV modificato in conforme agli standard</span><span class="sxs-lookup"><span data-stu-id="c3a93-114">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
+- [<span data-ttu-id="c7f76-106">Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi</span><span class="sxs-lookup"><span data-stu-id="c7f76-106">Azure: Microsoft-prefixed Azure integration packages removed</span></span>](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [<span data-ttu-id="c7f76-107">Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet</span><span class="sxs-lookup"><span data-stu-id="c7f76-107">Extensions: Package reference changes affecting some NuGet packages</span></span>](#extensions-package-reference-changes-affecting-some-nuget-packages)
+- [<span data-ttu-id="c7f76-108">HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer</span><span class="sxs-lookup"><span data-stu-id="c7f76-108">HTTP: HttpClient instances created by IHttpClientFactory log integer status codes</span></span>](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
+- [<span data-ttu-id="c7f76-109">Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti</span><span class="sxs-lookup"><span data-stu-id="c7f76-109">HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced</span></span>](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
+- [<span data-ttu-id="c7f76-110">Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi</span><span class="sxs-lookup"><span data-stu-id="c7f76-110">Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed</span></span>](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
+- [<span data-ttu-id="c7f76-111">SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x</span><span class="sxs-lookup"><span data-stu-id="c7f76-111">SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package</span></span>](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [<span data-ttu-id="c7f76-112">SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato</span><span class="sxs-lookup"><span data-stu-id="c7f76-112">SignalR: MessagePack Hub Protocol options type changed</span></span>](#signalr-messagepack-hub-protocol-options-type-changed)
+- [<span data-ttu-id="c7f76-113">SignalR: Metodi UseSignalR e UseConnections rimossi</span><span class="sxs-lookup"><span data-stu-id="c7f76-113">SignalR: UseSignalR and UseConnections methods removed</span></span>](#signalr-usesignalr-and-useconnections-methods-removed)
+- [<span data-ttu-id="c7f76-114">File statici: tipo di contenuto CSV modificato in conforme agli standard</span><span class="sxs-lookup"><span data-stu-id="c7f76-114">Static files: CSV content type changed to standards-compliant</span></span>](#static-files-csv-content-type-changed-to-standards-compliant)
 
 [!INCLUDE[Azure: Microsoft-prefixed Azure integration packages removed](~/includes/core-changes/aspnetcore/5.0/azure-integration-packages-removed.md)]
 
@@ -61,18 +61,23 @@ ms.locfileid: "83702448"
 
 ***
 
-## <a name="core-net-libraries"></a><span data-ttu-id="c3a93-115">Principali librerie .NET</span><span class="sxs-lookup"><span data-stu-id="c3a93-115">Core .NET libraries</span></span>
+## <a name="core-net-libraries"></a><span data-ttu-id="c7f76-115">Principali librerie .NET</span><span class="sxs-lookup"><span data-stu-id="c7f76-115">Core .NET libraries</span></span>
 
-- [<span data-ttu-id="c3a93-116">I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN</span><span class="sxs-lookup"><span data-stu-id="c3a93-116">SSE and SSE2 CompareGreaterThan methods properly handle NaN inputs</span></span>](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
+- [<span data-ttu-id="c7f76-116">I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN</span><span class="sxs-lookup"><span data-stu-id="c7f76-116">SSE and SSE2 CompareGreaterThan methods properly handle NaN inputs</span></span>](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
+- [<span data-ttu-id="c7f76-117">Il contatore. CreateCounterSetInstance genera ora InvalidOperationException se l'istanza esiste già</span><span class="sxs-lookup"><span data-stu-id="c7f76-117">CounterSet.CreateCounterSetInstance now throws InvalidOperationException if instance already exist</span></span>](#countersetcreatecountersetinstance-now-throws-invalidoperationexception-if-instance-already-exists)
 
 [!INCLUDE [sse-comparegreaterthan-intrinsics](../../../includes/core-changes/corefx/5.0/sse-comparegreaterthan-intrinsics.md)]
 
 ***
 
-## <a name="globalization"></a><span data-ttu-id="c3a93-117">Globalizzazione</span><span class="sxs-lookup"><span data-stu-id="c3a93-117">Globalization</span></span>
+[!INCLUDE [createcountersetinstance-throws-invalidoperation](../../../includes/core-changes/corefx/5.0/createcountersetinstance-throws-invalidoperation.md)]
 
-- [<span data-ttu-id="c3a93-118">StringInfo e TextElementEnumerator ora sono conformi a UAX29</span><span class="sxs-lookup"><span data-stu-id="c3a93-118">StringInfo and TextElementEnumerator are now UAX29-compliant</span></span>](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
-- [<span data-ttu-id="c3a93-119">API di globalizzazione usare le librerie ICU in Windows</span><span class="sxs-lookup"><span data-stu-id="c3a93-119">Globalization APIs use ICU libraries on Windows</span></span>](#globalization-apis-use-icu-libraries-on-windows)
+***
+
+## <a name="globalization"></a><span data-ttu-id="c7f76-118">Globalizzazione</span><span class="sxs-lookup"><span data-stu-id="c7f76-118">Globalization</span></span>
+
+- [<span data-ttu-id="c7f76-119">StringInfo e TextElementEnumerator ora sono conformi a UAX29</span><span class="sxs-lookup"><span data-stu-id="c7f76-119">StringInfo and TextElementEnumerator are now UAX29-compliant</span></span>](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
+- [<span data-ttu-id="c7f76-120">API di globalizzazione usare le librerie ICU in Windows</span><span class="sxs-lookup"><span data-stu-id="c7f76-120">Globalization APIs use ICU libraries on Windows</span></span>](#globalization-apis-use-icu-libraries-on-windows)
 
 [!INCLUDE [uax29-compliant-grapheme-enumeration](../../../includes/core-changes/globalization/5.0/uax29-compliant-grapheme-enumeration.md)]
 
@@ -82,11 +87,11 @@ ms.locfileid: "83702448"
 
 ***
 
-## <a name="windows-forms"></a><span data-ttu-id="c3a93-120">Windows Forms</span><span class="sxs-lookup"><span data-stu-id="c3a93-120">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="c7f76-121">Windows Forms</span><span class="sxs-lookup"><span data-stu-id="c7f76-121">Windows Forms</span></span>
 
-- [<span data-ttu-id="c3a93-121">Rimossi controlli barra di stato</span><span class="sxs-lookup"><span data-stu-id="c3a93-121">Removed status bar controls</span></span>](#removed-status-bar-controls)
-- [<span data-ttu-id="c3a93-122">I metodi WinForms ora generano ArgumentException</span><span class="sxs-lookup"><span data-stu-id="c3a93-122">WinForms methods now throw ArgumentException</span></span>](#winforms-methods-now-throw-argumentexception)
-- [<span data-ttu-id="c3a93-123">I metodi WinForms ora generano ArgumentNullException</span><span class="sxs-lookup"><span data-stu-id="c3a93-123">WinForms methods now throw ArgumentNullException</span></span>](#winforms-methods-now-throw-argumentnullexception)
+- [<span data-ttu-id="c7f76-122">Rimossi controlli barra di stato</span><span class="sxs-lookup"><span data-stu-id="c7f76-122">Removed status bar controls</span></span>](#removed-status-bar-controls)
+- [<span data-ttu-id="c7f76-123">I metodi WinForms ora generano ArgumentException</span><span class="sxs-lookup"><span data-stu-id="c7f76-123">WinForms methods now throw ArgumentException</span></span>](#winforms-methods-now-throw-argumentexception)
+- [<span data-ttu-id="c7f76-124">I metodi WinForms ora generano ArgumentNullException</span><span class="sxs-lookup"><span data-stu-id="c7f76-124">WinForms methods now throw ArgumentNullException</span></span>](#winforms-methods-now-throw-argumentnullexception)
 
 [!INCLUDE [winforms-deprecated-controls](../../../includes/core-changes/windowsforms/5.0/winforms-deprecated-controls.md)]
 
